--- a/public/css/wp-kirk-dashboard.css
+++ b/public/css/wp-kirk-dashboard.css
@@ -5,6 +5,6 @@
  * To do this, you have to use the right naming for the css id and class.
  *
  */
-.tribe-meta-box-dashboard {
+.advance-meta-dashboard {
   color: #f00;
 }
