--- a/resources/assets/less/advance-meta-common.less
+++ b/resources/assets/less/advance-meta-common.less
@@ -5,21 +5,21 @@
  * To do this, you have to use the right naming for the css id and class.
  *
  */
-@import (reference) "tribe-meta-box-variables";
+@import (reference) "advance-meta-variables";
 
-.tribe-meta-box
+.advance-meta
 {
   display          : block;
   background-color : @main-background-color;
 }
 
-.tribe-meta-box-align
+.advance-meta-align
 {
   display : block;
   clear   : both;
 }
 
-.tribe-meta-box-align-left
+.advance-meta-align-left
 {
   text-align : left;
 }
